# textboard-python-2022

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
static/: textboard.css
templates/: index.html
tests/: test_textboard.py
textboard/: config.py  db.py  main.py  models.py
